Domibus 5.0
- Added a property domibus.cache.ddc.lookup.ttl=3600 to define seconds for caching dynamic discovery data.
- WS Plugin getErrorMessages Request will return an exception in case message ID is not found
- Added a property domibus.ui.pages.messageLogs.interval.default=24 for configuring the initial time interval for filtering message logs
- Improved overall performance including refactoring of the database to allow partitioning
- Optimized pull locking for Oracle
- Possibility to use an external eArchiving agent
- Possibility to validate incoming UserMessages using a Validation Extension
- Possibility to reference JMS Plugin payloads via HTTP endpoints
- New WS Plugin which uses the edelivery namespace
- New client authentication trust store admin console page
- Added Reset filters button on all pages of Admin Console
- Added possibility to display service and action information in the Domibus Admin console.
- Added possibility to download eDelivery message receipts for non-repudiation purposes in the messages page
- Added a new page in the admin console that displays the TLS Truststore; One can download or upload the truststore or add and remove certificates from this trsut from within this page
- Added a new page in the admin console that displays the active and disabled domains; One can activate or deactivate a domain at runtime from within this page
- Added refresh keystore button on the Domibus Truststore page in admin console to force reading the file from the disk and save it in the DB;
- domibus.security.keystore.* and domibus.security.truststore.* properties are used only the first time domibus starts and persisted in the DB to be used from there on;
- Added possibility to re-read the trust and key stores from the disk by changing the properties above