@@ -1,4 +1,5 @@
 Domibus 5.0
+- Fixed issue when MessageProperties is missing in ebMS3 message
 - Added a property domibus.cache.ddc.lookup.ttl=3600 to define seconds for caching dynamic discovery data.
 - WS Plugin getErrorMessages Request will return an exception in case message ID is not found
 - Added a property domibus.ui.pages.messageLogs.interval.default=24 for configuring the initial time interval for filtering message logs
